Add final GitHub Pages workflow

--- a/.github/workflows/deploy-portfolio.yml
+++ b/.github/workflows/deploy-portfolio.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build
         run: |
           cd "My Dockerized Portfolio"
-          npm run build
+          CI=false npm run build
 
       # Deploy to GitHub Pages
       - name: Deploy
